<resources>
    <string name="app_name">Siiu</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="Useremail">Email</string>
    <string name="Username">Name</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="repeat_password">Confirm Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>

    <string name="showText">We will send Password reset link to your email.\n Please check your inbox.</string>
    <string name="send">SEND</string>
    <string name="contentDescription">Avatar</string>
    <string name="name_hint">User Name</string>
    <string name="save">SAVE</string>
    <string name="search">SEARCH</string>
    <string name="logout">LOG OUT</string>
</resources>
